[metadata]

name = async-sgc

version = 0.0.1

author = tuna21345

author_email = ryo816816816@gmail.com

description = package for sgc

long_description = file:README.md

long_description_content_type = text/markdown

url = https://github.com/tuna2134/async-sgc/

licence = file: LICENCE

python_requires = >=3.5

classifiers = 

  Development Status :: 2 - Pre-Alpha

  License :: OSI Approved :: MIT License

  Programming Language :: Python :: 3.5

  Programming Language :: Python :: 3.6

  Programming Language :: Python :: 3.7

  Programming Language :: Python :: 3.8

  Programming Language :: Python :: 3.9
